--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 	</properties>
 	<dependencies>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
 		<!-- To create health check urls -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
