--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<sonar-maven-plugin.version>5.1.0.4751</sonar-maven-plugin.version>
 		<jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
 		<maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
+		<springdoc-openapi.version>2.8.9</springdoc-openapi.version>
 	</properties>
 	<dependencies>
 
@@ -101,6 +102,12 @@
 			<artifactId>mockito-core</artifactId>
 			<version>${mockito-core.version}</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc-openapi.version}</version>
 		</dependency>
 	</dependencies>
 
