Added openapi relevant annotations & properties

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -14,3 +14,12 @@ sg-lta:
   api:
     url: https://datamall2.mytransport.sg/ltaodataservice/v3/BusArrival
     key: ${LTA_API_KEY}
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+    enabled: true
+    groups:
+      enabled: true
+  swagger-ui:
+    path: /swagger-ui.html
