--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
 		<maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
 		<springdoc-openapi.version>2.8.9</springdoc-openapi.version>
+		<jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
 	</properties>
 	<dependencies>
 
@@ -166,7 +167,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.10</version>
+				<version>${jacoco-maven-plugin.version}</version>
 				<executions>
 					<!-- 1) Inject agent before tests -->
 					<execution>
